--- a/index.css
+++ b/index.css
@@ -1,1 +1,24 @@
-asdf
+body {
+  background-color: :#ecf0f1;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+h1 {
+  color: #34495e;
+  transition: color 0.5s ease-in-out;
+}
+
+.clicked {
+  color: #7f8c8d;
+}
+
+.form {
+  display: none;
+}
+
+.showing {
+  display: block;
+}
