--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 body {
   background-color: #2c3e50;
   color: white;
+  text-align: center;
+  font-size: larger;
+}
+
+.js-clock {
+  font-size: 100px;
 }
 
 .btn {
@@ -19,6 +25,16 @@ body {
   display: block;
 }
 
+.js-toDoList {
+  font-size: larger;
+  font-weight: 700;
+}
+
+.js-weather {
+  font-size: 50px;
+  font-weight: 900;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -34,7 +50,9 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
+  max-height: 200%;
+  max-width: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
 }
